# mcpelauncher

./: .gitignore  CMakeLists.txt  README.md  setup_bin_libs.sh  start  start_debugger  start_mcpelauncher.sh  start_with_verb_3
epoll_shim/: CMakeLists.txt
epoll_shim/src/: CMakeLists.txt  libepoll-shim.0.dylib  libepoll-shim.dylib
epoll_shim/test/: epoll-test.c  expire-five.c  kqueue-state.c
ext/: libglfw.3.2.dylib  libuuid.16.dylib  libzip.dylib
hybris/src/: hooks.c  hooks_cpp.hpp  strlcpy.c
hybris/src/jb/: dlfcn.c  linker.c  linker.h
libs/: CMakeLists.txt
libs/epoll/src/: epoll.c
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/hybris/src/: hooks.c  hooks.cpp  hooks_shm.c  properties.c
libs/hybris/src/jb/: dlfcn.c  linker_debug.h
src/: common.cpp  common.h  hook.cpp  linux_appplatform.cpp  linux_appplatform.h  main.cpp  msa_network.cpp
src/minecraft/: function.h  string.cpp  string.h
